<resources>
    <string name="app_name">Bill Splitter</string>
    <string name="base_url" translatable="false">https://billsplitter.org/api/</string>
    <string name="local_preference" translatable="false">LocalPreferenceBillSplitter</string>
    <string name="local_preference_token" translatable="false">LocalPreferenceToken</string>
    <string name="facebook_app_id" translatable="false">504826793369359</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb504826793369359</string>

    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="sign_in">Sign in</string>
    <string name="intro_activity_title">Intro Activity title</string>
    <string name="welcome">Welcome!</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="forgot_password_question">Forgot password?</string>
    <string name="dont_have_an_account_question">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="or">OR</string>
    <string name="login_with_facebook_button">Login with Facebook button</string>
    <string name="login_with_google_button">Login with Google button</string>
    <string name="drop_down">Drop down</string>
    <string name="slider_image">Slider image</string>
    <string name="select_country">Select country</string>
    <string name="cancel">Cancel</string>
    <string name="sample_country_code">+36</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full name</string>
    <string name="have_an_account_question">Have an account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_pass_title">Opps!</string>
    <string name="forgot_pass_desc">It seems like you forgot your password. Don\'t worry, by verifying your phone you can reset it!</string>
    <string name="reset_password">Reset password</string>
    <string name="done">Done</string>
    <string name="reference_code">Reference code</string>
    <string name="purchase_history">Purchase history</string>
    <string name="shopping_list">Shopping list</string>
    <string name="completed">Completed</string>
    <string name="select_person">Select person</string>
    <string name="plus_icon">Plus icon</string>
    <string name="add_to_shopping_list">Add to shopping list</string>
    <string name="create_a_group">Create a group</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="invite_member">Invite member</string>
    <string name="email">Email</string>
    <string name="invite">Invite</string>
    <string name="server_client_id" translatable="false">129995393139-0or4578c7apclop4glqrlnttitf4mhpm.apps.googleusercontent.com</string>
    <string name="select_currency">Select currency</string>
    <string name="delete_all_done_items">Delete all done items</string>
    <string name="delete_group">Delete group</string>
    <string name="edit_group">Edit group</string>
    <string name="price">Price</string>
    <string name="okay">Okay</string>
    <string name="ask_delete_item">Are you sure to delete this item?</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="edit_profile_info">Edit profile info</string>
    <string name="current_password">Current password</string>
    <string name="password_change">Password change</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="password_change_optional">Password change (Optional)</string>
    <string name="prompt_password_length">Password length should be more than 6 characters</string>
    <string name="prompt_passwords_not_match">Passwords don\'t match</string>
    <string name="successful_register">You have registered successfully</string>
    <string name="error_occurred">Error occurred</string>
    <string name="successful_login">Successful login</string>
    <string name="prompt_fill_inputs">Please, fill all input fields</string>
    <string name="loading">Loading…</string>
    <string name="no_group">First, you need create a group or wait for invitations</string>
    <string name="successful_create_group">Group is created successfully</string>
    <string name="no_list">There is nothing to buy, you need add items first</string>
    <string name="successful_update_group">Group info updated successfully</string>
    <string name="successful_create_shopping_item">Shopping item is added successfully</string>
    <string name="select_buyer">Select buyer</string>
    <string name="successful_update_profile">Profile info has been updated successfully</string>
    <string name="not_provided">Not provided</string>
    <string name="provided">Code is provided</string>
    <string name="successful_update_shopping_item">Shopping item is updated successfully</string>
    <string name="cash_flow">Cash flow</string>
    <string name="balance">Balance</string>
    <string name="pay">Pay</string>
    <string name="provide_email">Provide email</string>
    <string name="not_valid_email">Not valid email</string>
    <string name="check_email">Please, check email inbox for reference code</string>
    <string name="password_reset_success">Your password is resetted successfully, login again please</string>
    <string name="successful_submitted_transaction">Payment is done successfully</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="six_month">6 Months</string>
    <string name="year">Year</string>
    <string name="cost_statistics_chart_legend">Cost statistics by categories</string>
    <string name="no_data">No data for this period</string>
    <string name="income">Income</string>
    <string name="outcome">Outcome</string>
</resources>
