<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="@dimen/normal_margin">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:text="@string/welcome"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/login_phone_code_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="@dimen/medium_margin">

                    <TextView
                        android:id="@+id/login_phone_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_country_code"
                        android:textColor="#A5B1C2"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/medium_margin"
                        android:layout_toEndOf="@id/login_phone_code"
                        android:contentDescription="@string/drop_down"
                        android:src="@drawable/ic_drop_down" />
                </RelativeLayout>

                <View
                    android:layout_width="2dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginEnd="@dimen/medium_margin"
                    android:background="@drawable/bg_divider_gray" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/login_phone_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:textSize="18sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/login_password_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="18sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/login_forgot_pass_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="@dimen/medium_margin"
                android:text="@string/forgot_password_question"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:background="@drawable/bg_primary_btn"
            android:text="@string/sign_in"
            android:textColor="@color/colorWhite" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/login_sign_up_text"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="@dimen/normal_margin"
                android:text="@string/dont_have_an_account_question"
                android:textColor="@color/colorLightGray"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_sign_up_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/normal_margin"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin">

            <TextView
                android:id="@+id/login_or_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/or"
                android:textColor="@color/colorLightGray"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_toStartOf="@id/login_or_text"
                android:background="@color/colorLightGray" />

            <View
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_toEndOf="@id/login_or_text"
                android:background="@color/colorLightGray" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/normal_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/login_facebook_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="@dimen/large_margin"
                android:clickable="true"
                android:contentDescription="@string/login_with_facebook_button"
                android:focusable="true"
                android:src="@drawable/ic_facebook_rounded" />

            <ImageView
                android:id="@+id/login_google_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:clickable="true"
                android:contentDescription="@string/login_with_google_button"
                android:focusable="true"
                android:src="@drawable/ic_google_rounded" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
