<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/normal_margin">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:layout_gravity="center"
            android:text="@string/forgot_pass_title"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:layout_gravity="center"
            android:text="@string/forgot_pass_desc"
            android:textAlignment="center"
            android:textColor="@color/colorGray"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/phone_code_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="@dimen/medium_margin">

                    <TextView
                        android:id="@+id/phone_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_country_code"
                        android:textColor="#A5B1C2"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/medium_margin"
                        android:layout_toEndOf="@id/phone_code"
                        android:contentDescription="@string/drop_down"
                        android:src="@drawable/ic_drop_down" />
                </RelativeLayout>

                <View
                    android:layout_width="2dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginEnd="@dimen/medium_margin"
                    android:background="@drawable/bg_divider_gray" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/phone_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:textSize="18sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/reset_pass_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="@drawable/bg_primary_btn"
            android:text="@string/reset_password"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</ScrollView>
