<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:attrs="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/normal_margin">

    <TextView
        android:id="@+id/intro_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/normal_margin"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/intro_activity_title"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/terms_conditions_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/noto_sans"
        android:text="@string/terms_conditions"
        android:textColor="@color/colorLightGray" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/terms_conditions_text"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/large_margin"
        android:background="@drawable/bg_primary_btn"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite" />

    <com.rd.PageIndicatorView
        android:id="@+id/pageIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/sign_in_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/normal_margin"
        app:piv_animationType="worm"
        app:piv_dynamicCount="true"
        app:piv_interactiveAnimation="true"
        app:piv_selectedColor="#B5BBDF"
        app:piv_unselectedColor="#EFF1F8"
        app:piv_viewPager="@id/intro_view_pager"
        attrs:piv_padding="6dp"
        attrs:piv_radius="4dp" />


    <android.support.v4.view.ViewPager
        android:id="@+id/intro_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/sign_in_btn"
        android:layout_below="@id/intro_title"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/large_margin"/>
</RelativeLayout>